fixed minor column spacing issues

--- a/src/css/apply.css
+++ b/src/css/apply.css
@@ -1,13 +1,4 @@
-html, body {
-    overflow-x: hidden;
-    overflow: visible;
-}
-
-p {
-  font-family: 'DIN Regular', sans-serif;
-}
-
-.applications {
+.info-container {
   display: grid;
   align-items: flex-start;
   grid-column: 2 / span 11;
@@ -53,7 +44,7 @@ p {
 }
 
 .info-group__events {
-  grid-column: 3 / span 3;
+  grid-column: 3 / span 2;
   margin: 0px;
   margin-bottom: 1.6rem;
 }
@@ -67,11 +58,11 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-  .applications {
+  .info-container {
     grid-column: span 12;
     margin: 5rem 0;
   }
-  .info-group, .applications {
+  .info-group, .info-container {
     grid-column-gap: 1rem;
     grid-template-columns: repeat(12, 1fr);
   }
